fix: pagination on mobile

--- a/src/components/shared/Pager.scss
+++ b/src/components/shared/Pager.scss
@@ -13,9 +13,9 @@
 		flex-direction: column;
 	}
 
-	/* .pagination {
+	.pagination {
 		@media (max-width: $breakpoint-tablet) {
-			flex-direction: column;
+			flex-wrap: wrap;
 		}
-	} */
+	}
 }
